--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
         "type": "git",
         "url": "git://github.com/aardvarrk/glowing-bear.git"
     },
-    "version": "0.0.2"
+    "dependencies": {
+        "coffee-script": "1.4.x"
+    },
+    "version": "0.0.3"
 }
